# artimonist-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
src/: args.rs  common.rs  derive.rs  diagram.rs  encrypt.rs  input.rs  main.rs  matrix.rs  output.rs  unicode.rs
src/bip32/: arg.rs  execute.rs  mod.rs
src/derive/: arg.rs  cmd.rs  execute.rs  mod.rs  multisig.rs  path.rs  wallet.rs
src/diagram/: arg.rs  cmd.rs  console.rs  execute.rs  file.rs  language.rs  matrix.rs  mod.rs  output.rs
src/encrypt/: arg.rs  bip38.rs  cmd.rs  encryptor.rs  execute.rs  mod.rs
src/utils/: bip38.rs  inquire.rs  mod.rs  unicode.rs
tests/: bip32.rs  common.rs  derive.rs  diagram.rs  encrypt.rs
tests/bip32/: bip32_mnemonic  bip32_xpub
tests/derive/: bip32_master  bip32_mnemonic  bip44_m23  bip44_m35  bip49_m23  bip49_m35  bip84_m23  bip84_m35  derive_console  derive_m23_console  master_bip44  master_bip49  master_bip84  master_m23  master_m35  mnemonic_bip44  mnemonic_bip49  mnemonic_bip84
tests/diagram/: complex.art  complex_all_console  complex_default  complex_default_console  complex_pwd  complex_unicode  complex_unicode.art  complex_unicode_console  complex_v2  complex_wif  complex_xpriv  complex_xprv  simple.art  simple_all_console  simple_default  simple_help.txt  simple_pwd  simple_unicode  simple_unicode.art  simple_v2  simple_wif  simple_wif_console  simple_xpriv  simple_xpriv_console  simple_xprv
tests/encrypt/: wif  wif_decrypted  wif_encrypted  wifs  wifx
