[package]
name = "artimonist"
version = "1.5.0"
edition = "2024"

description = "A tool for generating mnemonics and wallets."
authors = ["Artimonist <artimonist@gmail.com>"]
homepage = "https://artimonist.org/"
repository = "https://github.com/artimonist/cli/"
license = "MIT"
keywords = ["bitcoin", "wallet", "mnemonic", "crypto", "btc", "art"]
categories = ["cryptography"]

[[bin]]
name = "artimonist"
path = "src/main.rs"

[features]
default = []

[dependencies]
artimonist = { version = "1.2.3" }
clap = { version = "^4.5.28", features = ["derive"] }
inquire = { version = "^0.7.5", default-features = false, features = ["crossterm"] }
comfy-table = { version = "^7.1.4", default-features = false }
bip38 = "1.1.1"
thiserror = "2.0.11"
anyhow = "1.0.98"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
