[package]
name = "artimonist"
version = "1.7.0"
edition = "2024"

description = "A tool for generating mnemonics and wallets."
authors = ["Artimonist <artimonist@gmail.com>"]
homepage = "https://artimonist.org/"
repository = "https://github.com/artimonist/cli/"
license = "MIT"
keywords = ["bitcoin", "wallet", "mnemonic", "crypto", "btc", "art"]
categories = ["cryptography"]

[[bin]]
name = "artimonist"
path = "src/main.rs"

[features]
default = []
testnet = ["artimonist/testnet"]


[dependencies]
artimonist = { version = "1.5" }
clap = { version = "^4.5", features = ["derive"] }
inquire = { version = "^0.7", default-features = false, features = ["crossterm"] }
comfy-table = { version = "^7.1", default-features = false }
thiserror = "2"
anyhow = "1"
unicode-normalization = "0.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
